use public hub image

--- a/helm-lint/Dockerfile
+++ b/helm-lint/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.pkg.github.com/collaborationfactory/github-actions/helm-s3:latest
+FROM cfactory/helm-s3:latest
 
 COPY entrypoint.sh /entrypoint.sh
 
