--- a/helm-s3-repo/Dockerfile
+++ b/helm-s3-repo/Dockerfile
@@ -1,10 +1,9 @@
 FROM alpine/helm:3.0.1
 
-RUN apk add --no-cache --virtual build-dependencies py-pip git
-RUN apk add --no-cache bash
+RUN apk add --no-cache --virtual build-dependencies py-pip
+RUN apk add --no-cache bash git
 RUN python -m pip install awscli
 
-RUN helm plugin install https://github.com/hypnoglow/helm-s3.git
 RUN apk del build-dependencies
 
 COPY entrypoint.sh /entrypoint.sh
