GITHUB_ACTION_REPOSITORY used to locate run-many.ts

--- a/fe-actions/workflow-templates/fe-pr.yml
+++ b/fe-actions/workflow-templates/fe-pr.yml
@@ -1,4 +1,4 @@
-name: 'Pull Request'
+name: 'Frontend Pull Request CI Template'
 on:
   pull_request:
     branches:
@@ -15,12 +15,15 @@ jobs:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
 
   build:
+    needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
 
   code-quality:
+    needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-pr-code-quality.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
 
   e2e:
+    needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
     secrets:
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
