[fixup] logs added

--- a/.github/actions/run-many/action.yml
+++ b/.github/actions/run-many/action.yml
@@ -16,7 +16,7 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - run: pwd
+    - run: echo $(pwd)
       shell: bash
-    - run: echo ${GITHUB_ACTION_REPOSITORY}
+    - run: echo "$GITHUB_ACTION_REPOSITORY"
       shell: bash
