--- a/.github/actions/run-many/action.yml
+++ b/.github/actions/run-many/action.yml
@@ -1,4 +1,4 @@
-name: 'Nx Run Many Action'
+name: 'Frontend Nx Run Many Action'
 description: 'Github Action to run Nx command for many Nx projects'
 inputs:
   target:
@@ -16,5 +16,5 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - run: npx ts-node "$GITHUB_ACTION_PATH/../../../fe-actions/scripts/run-many.ts" ${{ inputs.target }} ${{ inputs.jobIndex }} ${{ inputs.jobCount }} ${{ inputs.base }}
+    - run: npx ts-node "$GITHUB_ACTION_PATH/../../../tools/scripts/run-many/run-many.ts" ${{ inputs.target }} ${{ inputs.jobIndex }} ${{ inputs.jobCount }} ${{ inputs.base }}
       shell: bash
