--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -1,10 +1,11 @@
-name: Frontend PR Code Quality Workflow
+name: Frontend Code Quality Workflow
 
 on:
   workflow_call
 
 jobs:
   code-quality:
+    needs: install-deps
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
