--- a/.github/workflow-templates/fe/fe-pr.yml
+++ b/.github/workflow-templates/fe/fe-pr.yml
@@ -1,4 +1,4 @@
-name: 'Frontend Pull Request CI Template'
+name: 'Frontend Pull Request CI'
 on:
   pull_request:
     branches:
@@ -11,16 +11,24 @@ env:
 jobs:
   install-deps:
     uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    with:
+      GHA_REF: ${{ github.event.pull_request.head.ref }}
     secrets:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
 
   build:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflowswith
+    with:
+      GHA_REF: ${{ github.event.pull_request.head.ref }}
+      GHA_BASE: ${{ github.event.pull_request.base.ref }}
 
   code-quality:
     uses: collaborationFactory/github-actions/.github/workflows/fe-code-quality.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
 
   e2e:
     uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    with:
+      GHA_REF: ${{ github.event.pull_request.head.ref }}
+      GHA_BASE: ${{ github.event.pull_request.base.ref }}
     secrets:
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
