--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -5,6 +5,13 @@ on:
     secrets:
       PERCY_TOKEN:
         required: true
+    inputs:
+      GHA_REF:
+        type: string
+        required: true
+      GHA_BASE:
+        type: string
+        required: true
 
 jobs:
   e2e:
@@ -20,7 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ inputs.GHA_REF }}
           fetch-depth: 0
 
       - uses: actions/setup-node@v1
@@ -43,7 +50,7 @@ jobs:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
           jobCount: ${{ env.jobCount }}
-          base: ${{ github.event.pull_request.base.ref }}
+          base: ${{ inputs.GHA_BASE }}
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
           PERCY_PARTIAL_BUILD: 1
