--- a/.github/workflows/fe-install-deps.yml
+++ b/.github/workflows/fe-install-deps.yml
@@ -2,6 +2,10 @@ name: Frontend Install Dependencies Workflow
 
 on:
   workflow_call:
+    inputs:
+      GHA_REF:
+        type: string
+        required: true
     secrets:
       DOT_NPMRC:
         required: true
@@ -17,7 +21,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ inputs.GHA_REF }}
           fetch-depth: 0
 
       - uses: actions/setup-node@v1
