--- a/.github/workflow-templates/fe/fe-main.yml
+++ b/.github/workflow-templates/fe/fe-main.yml
@@ -18,6 +18,7 @@ jobs:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
 
   e2e-tests:
+    needs: install-deps
     uses: collaborationFactory/github-actions/workflows/fe-e2e.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
     with:
       GHA_REF: ''
@@ -26,12 +27,14 @@ jobs:
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
 
   build:
+    needs: install-deps
     uses: collaborationFactory/github-actions/workflows/fe-build.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
 
   snapshot:
+    needs: build
     uses: collaborationFactory/github-actions/workflows/fe-snapshot.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
     with:
       GHA_REF: ''
