GIT_USER_TOKEN added

--- a/.github/workflow-templates/fe/fe-release.yml
+++ b/.github/workflow-templates/fe/fe-release.yml
@@ -42,6 +42,6 @@ jobs:
       JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
       JFROG_USER: ${{ secrets.JFROG_USER }}
-      GH_ACTION_BOT: ${{ secrets.GH_ACTION_BOT }}
+      GIT_USER_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
       GIT_USER: ${{ secrets.GIT_USER }}
       GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
