--- a/.github/workflows/fe-snapshot.yml
+++ b/.github/workflows/fe-snapshot.yml
@@ -16,7 +16,7 @@ on:
         required: true
       JFROG_USER:
         required: true
-      GH_ACTION_BOT:
+      GIT_USER_TOKEN:
         required: true
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
         with:
           ref: ${{ inputs.GHA_REF }}
           fetch-depth: 0
-          token: ${{ secrets.GH_ACTION_BOT }}
+          token: ${{ secrets.GIT_USER_TOKEN }}
 
       - name: Cache Node Modules
         id: npm-cache
