--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -12,5 +12,8 @@ env:
 jobs:
   check-licenses:
     uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    with:
+      FOSS_TMP: dist/fossTmp
+      FOSS_DIST: dist/foss.json
     secrets:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
