--- a/.github/workflows/fe-licenses.yml
+++ b/.github/workflows/fe-licenses.yml
@@ -3,9 +3,6 @@ name: Frontend Install Dependencies Workflow
 on:
   workflow_call:
     inputs:
-      FOSS_TMP:
-        required: true
-        type: string
       FOSS_DIST:
         required: true
         type: string
@@ -54,10 +51,10 @@ jobs:
 
       - name: Check Licenses Remote
         if: steps.localLicenseChecker.outcome == 'failure'
-        run: node node_modules/@cplace-next/cf-frontend-licenses/main.js check ${{ inputs.FOSS_TMP }}
+        run: node node_modules/@cplace-next/cf-frontend-licenses/main.js check ${{ inputs.FOSS_DIST }}
 
       - name: Run Diff
-        run: diff -a --suppress-common-lines -y ./foss-list.json ${{ inputs.FOSS_DIST }}
+        run: diff -a --suppress-common-lines -y ./foss-list.json ${{ inputs.FOSS_DIST }}/foss-list.json
 
       - name: Read fossTmp
         id: readFossTmp
