--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -14,5 +14,6 @@ jobs:
     uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
     with:
       FOSS_DIST: dist
+      CUSTOM_LICENSES_JSON: custom-licenses/custom-licenses.json
     secrets:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
