--- a/.github/workflows/fe-licenses.yml
+++ b/.github/workflows/fe-licenses.yml
@@ -6,6 +6,9 @@ on:
       FOSS_DIST:
         required: true
         type: string
+      CUSTOM_LICENSES_JSON:
+        required: false
+        type: string
     secrets:
       DOT_NPMRC:
         required: true
@@ -51,14 +54,14 @@ jobs:
 
       - name: Check Licenses Remote
         if: steps.localLicenseChecker.outcome == 'failure'
-        run: node node_modules/@cplace-next/cf-frontend-licenses/main.js check ${{ inputs.FOSS_DIST }}
+        run: node node_modules/@cplace-next/cf-frontend-licenses/main.js check ${{ inputs.FOSS_DIST }} ${{ inputs.CUSTOM_LICENSES_JSON }}
 
       - name: Run Diff
         run: diff -a --suppress-common-lines -y ./foss-list.json ${{ inputs.FOSS_DIST }}/foss-list.json
 
       - name: Read fossTmp
         id: readFossTmp
-        run: echo "::set-output name=foss_status::$(cat ${{ inputs.FOSS_TMP }})"
+        run: echo "::set-output name=foss_status::$(cat ${{ inputs.FOSS_DIST }}/fossTmp)"
 
       - name: Check fossTmp
         if: steps.readFossTmp.outputs.foss_status == '1'
