--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config=./jest.config.js",
+    "check-prettier": "prettier --check .",
+    "write-prettier": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.7.23"
-  }
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "27.0.2",
+    "@types/node": "^18.7.23",
+    "jest": "27.2.3",
+    "prettier": "2.7.1",
+    "ts-jest": "27.0.5",
+    "typescript": "4.5.5"
+  },
+  "dependencies": {}
 }
