--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": ".",
     "module": "commonjs",
     "target": "es5",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "importHelpers": false
   },
   "include": ["**/*.ts"]
