--- a/.github/workflow-templates/fe/fe-release.yml
+++ b/.github/workflow-templates/fe/fe-release.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@master
     with:
       GHA_REF: ''
     secrets:
@@ -18,7 +18,7 @@ jobs:
 
   e2e-tests:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
@@ -27,14 +27,14 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@master
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
 
   snapshot:
     needs: [build, code-quality, e2e]
-    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@feature/PFM-ISSUE-10870-Share-CI-CD-workflows
+    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@master
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
