--- a/.github/workflows/fe-tag.yml
+++ b/.github/workflows/fe-tag.yml
@@ -24,7 +24,7 @@ on:
         required: true
 
 jobs:
-  snapshot:
+  tag:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
