Run all e2e tests in case e2e is running in a default branch

--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -50,6 +50,7 @@ jobs:
           jobIndex: ${{ matrix.jobIndex }}
           jobCount: ${{ env.jobCount }}
           base: ${{ inputs.GHA_BASE }}
+          ref: ${{ inputs.GHA_REF }}
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
           PERCY_PARTIAL_BUILD: 1
