--- a/.github/actions/run-many/action.yml
+++ b/.github/actions/run-many/action.yml
@@ -13,8 +13,11 @@ inputs:
   base:
     description: 'Base branch'
     required: true
+  ref:
+    description: 'Reference'
+    required: true
 runs:
   using: 'composite'
   steps:
-    - run: npx ts-node "$GITHUB_ACTION_PATH/../../../tools/scripts/run-many/run-many.ts" ${{ inputs.target }} ${{ inputs.jobIndex }} ${{ inputs.jobCount }} ${{ inputs.base }}
+    - run: npx ts-node "$GITHUB_ACTION_PATH/../../../tools/scripts/run-many/run-many.ts" ${{ inputs.target }} ${{ inputs.jobIndex }} ${{ inputs.jobCount }} ${{ inputs.base }} ${{ inputs.ref }}
       shell: bash
