--- a/.github/workflow-templates/fe/fe-main.yml
+++ b/.github/workflow-templates/fe/fe-main.yml
@@ -20,10 +20,13 @@ jobs:
   e2e-tests:
     needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
+    # E2E tests should run in the default branch only if Percy is being used
+    if: ${{ secrets.PERCY_TOKEN }}
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
     secrets:
+      # PERCY_TOKEN is optional, and it should only be provided if Cypress is being used with Percy
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
 
   build:
