--- a/.github/workflow-templates/fe/fe-main.yml
+++ b/.github/workflow-templates/fe/fe-main.yml
@@ -17,6 +17,7 @@ jobs:
     secrets:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
 
+  # This job is only needed in case you are using Percy
   e2e-tests:
     needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
@@ -24,7 +25,6 @@ jobs:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
     secrets:
-      # PERCY_TOKEN is optional, and it should only be provided if Cypress is being used with Percy
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
 
   build:
