Revert "PFM-ISSUE-11561  disable percy in reusable actions (#30)"
This reverts commit fd9388e06afb473915a4d98aff006c7927022941.

--- a/.github/workflow-templates/fe/fe-release.yml
+++ b/.github/workflow-templates/fe/fe-release.yml
@@ -22,6 +22,8 @@ jobs:
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
+    secrets:
+      PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
 
   build:
     needs: install-deps
