--- a/.github/workflow-templates/fe/fe-main.yml
+++ b/.github/workflow-templates/fe/fe-main.yml
@@ -17,12 +17,15 @@ jobs:
     secrets:
       DOT_NPMRC: ${{ secrets.DOT_NPMRC }}
 
+  # This job is only needed in case you are using Percy
   e2e-tests:
     needs: install-deps
     uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
+    secrets:
+      PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
 
   build:
     needs: install-deps
