--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -54,36 +54,36 @@ jobs:
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
           PERCY_PARTIAL_BUILD: 1
-  finalize-percy:
-    needs: e2e
-    runs-on: ubuntu-latest
-    timeout-minutes: 45
-    steps:
-      - name: Check Percy Token
-        id: percyToken
-        run: echo '::set-output name=value::${{secrets.PERCY_TOKEN}}'
-
-      - uses: actions/checkout@v2
-        if: steps.percyToken.outputs.value
-        with:
-          ref: ${{ inputs.GHA_REF }}
-          fetch-depth: 0
-
-      - uses: actions/setup-node@v1
-        if: steps.percyToken.outputs.value
-        with:
-          node-version: '14'
-
-      - name: Cache Node Modules
-        if: steps.percyToken.outputs.value
-        id: npm-cache
-        uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Mark Percy Build as Finalized
-        if: steps.percyToken.outputs.value
-        run: ./node_modules/.bin/percy build:finalize
-        env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+#  finalize-percy:
+#    needs: e2e
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 45
+#    steps:
+#      - name: Check Percy Token
+#        id: percyToken
+#        run: echo '::set-output name=value::${{secrets.PERCY_TOKEN}}'
+#
+#      - uses: actions/checkout@v2
+#        if: steps.percyToken.outputs.value
+#        with:
+#          ref: ${{ inputs.GHA_REF }}
+#          fetch-depth: 0
+#
+#      - uses: actions/setup-node@v1
+#        if: steps.percyToken.outputs.value
+#        with:
+#          node-version: '14'
+#
+#      - name: Cache Node Modules
+#        if: steps.percyToken.outputs.value
+#        id: npm-cache
+#        uses: actions/cache@v2
+#        with:
+#          path: '**/node_modules'
+#          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+#
+#      - name: Mark Percy Build as Finalized
+#        if: steps.percyToken.outputs.value
+#        run: ./node_modules/.bin/percy build:finalize
+#        env:
+#          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
