--- a/.github/workflows/fe-install-deps.yml
+++ b/.github/workflows/fe-install-deps.yml
@@ -19,10 +19,9 @@ jobs:
         with:
           access_token: ${{ github.token }}
 
-      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
         with:
-          ref: ${{ inputs.GHA_REF }}
-          fetch-depth: 0
+          node-version: 14.16.1
 
       - uses: actions/setup-node@v1
         with:
