--- a/.github/workflows/fe-snapshot.yml
+++ b/.github/workflows/fe-snapshot.yml
@@ -28,7 +28,9 @@ jobs:
           ref: ${{ inputs.GHA_REF }}
           fetch-depth: 0
           token: ${{ secrets.GIT_USER_TOKEN }}
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14.16.1
       - name: Cache Node Modules
         id: npm-cache
         uses: actions/cache@v2
