--- a/.github/workflows/fe-install-deps.yml
+++ b/.github/workflows/fe-install-deps.yml
@@ -18,7 +18,10 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{ github.token }}
-
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ inputs.GHA_REF }}
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version: 14.16.1
