--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -53,6 +53,7 @@ jobs:
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
           PERCY_PARTIAL_BUILD: 1
+          DEV_STORIES: true
 #  finalize-percy:
 #    needs: e2e
 #    runs-on: ubuntu-latest
