--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -35,7 +35,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Build and Storybook
-        uses: collaborationFactory/github-actions/.github/actions/run-many@master
+        uses: collaborationFactory/github-actions/.github/actions/run-many@test-node-18
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
