--- a/.github/workflow-templates/fe/fe-pr-snapshot.yml
+++ b/.github/workflow-templates/fe/fe-pr-snapshot.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   publish-pr-snapshot:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-pr-snapshot.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-pr-snapshot.yml@release/23.2
     with:
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
     secrets:
