--- a/.github/workflow-templates/fe/fe-release.yml
+++ b/.github/workflow-templates/fe/fe-release.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@release/23.2
     with:
       GHA_REF: ''
     secrets:
@@ -18,7 +18,7 @@ jobs:
 
   e2e-tests:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@release/23.2
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
@@ -27,14 +27,14 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@release/23.2
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
 
   tag:
     needs: [build, e2e-tests]
-    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@release/23.2
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
