--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier": "2.7.1",
     "ts-jest": "27.0.5",
     "typescript": "4.5.5",
-    "glob": "^10.2.2"
+    "glob": "10.2.2"
   },
   "dependencies": {}
 }
