--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jest": "27.2.3",
     "prettier": "2.7.1",
     "ts-jest": "27.0.5",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "glob": "10.2.2"
   },
   "dependencies": {}
 }
