--- a/.github/workflows/cleanup-snapshots.yml
+++ b/.github/workflows/cleanup-snapshots.yml
@@ -1,9 +1,20 @@
 name: Cleanup Snapshot Artifacts on a CRON Schedule
 
-on:
+on:  
   schedule:
     # Runs "At 00:00 on day-of-month 1 in every 3rd month." (see https://crontab.guru)
     - cron: '0 0 1 */3 *'
+  workflow_call:
+    secrets:
+      JFROG_BASE64_TOKEN:
+        required: true
+      JFROG_URL:
+        required: true
+      JFROG_USER:
+        required: true
+      DOT_NPMRC:
+        required: true
+        
 jobs:
   build:
     name: Cleanup Snapshot Artifacts
@@ -19,26 +30,16 @@ jobs:
         with:
           node-version: 18.11.0
 
+      - name: Cache Node Modules
+        id: npm-cache
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}          
+
       - name: Cleanup Snapshot Artifacts
         uses: collaborationFactory/github-actions/.github/actions/artifacts@master
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
           JFROG_USER: ${{ secrets.JFROG_USER }}
-          ONLY_BUMP_VERSION: true
-          BASE: ${{ inputs.GHA_BASE }}
-
-
-  tag:
-    needs: [build, e2e-tests]
-    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@master
-    with:
-      GHA_REF: ''
-      GHA_BASE: ${{ github.event.before }}
-    secrets:
-      JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
-      JFROG_URL: ${{ secrets.JFROG_URL }}
-      JFROG_USER: ${{ secrets.JFROG_USER }}
-      GIT_USER_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
-      GIT_USER: ${{ secrets.GIT_USER }}
-      GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
