--- a/.github/workflow-templates/fe/fe-pr-close.yml
+++ b/.github/workflow-templates/fe/fe-pr-close.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - '**'
 
+permissions: write-all
+
 jobs:
   remove-artifacts:
     uses: collaborationFactory/github-actions/.github/workflows/fe-pr-close.yml@master
