--- a/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
+++ b/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   cleanup-snapshots:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-cleanup-snapshots.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-cleanup-snapshots.yml@release/23.3
     secrets:
       JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
