--- a/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
+++ b/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
@@ -4,6 +4,8 @@ on:
     # Runs "At 00:00 on day-of-month 28 in every 3rd month." (see https://crontab.guru)
     - cron: '0 0 28 */3 *'
 
+permissions: write-all
+
 jobs:
   cleanup-snapshots:
     uses: collaborationFactory/github-actions/.github/workflows/fe-cleanup-snapshots.yml@release/23.3
