--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   check-licenses:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@master
+    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@feature/PFM-TASK-3833-Migrate-frontend-build-to-Nx-16
     with:
       FOSS_DIST: dist
       CUSTOM_LICENSES_JSON: custom-licenses/custom-licenses.json
