--- a/.github/workflows/fe-release.yml
+++ b/.github/workflows/fe-release.yml
@@ -50,7 +50,7 @@ jobs:
         uses: dawidd6/action-get-tag@v1
 
       - name: Build and Push to Jfrog NPM Registry
-        uses: collaborationFactory/github-actions/.github/actions/artifacts@master
+        uses: collaborationFactory/github-actions/.github/actions/artifacts@feature/PFM-TASK-3833-Migrate-frontend-build-to-Nx-16
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
