--- a/.github/workflow-templates/fe/fe-pr.yml
+++ b/.github/workflow-templates/fe/fe-pr.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@feature/PFM-TASK-3833-Migrate-frontend-build-to-Nx-16
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@master
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
     secrets:
@@ -20,18 +20,18 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-TASK-3833-Migrate-frontend-build-to-Nx-16
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@master
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
 
   code-quality:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-code-quality.yml@feature/PFM-TASK-3833-Migrate-frontend-build-to-Nx-16
+    uses: collaborationFactory/github-actions/.github/workflows/fe-code-quality.yml@master
 
   e2e:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@feature/PFM-TASK-3833-Migrate-frontend-build-to-Nx-16
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@master
     with:
       GHA_REF: ${{ github.event.pull_request.head.ref }}
       GHA_BASE: ${{ github.event.pull_request.base.ref }}
